2014-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Remove irrelevant Milena test value/interop.

	* tests/value/interop.cc: Remove.
	* tests/value/Makefile.am (check_PROGRAMS): Remove interop.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove mentions to trash/ directories in Milena.

	* doc/Doxyfile.in (EXCLUDE)
	* doc/Makefile.am ($(srcdir)/outputs.mk, regen-outputs-mk)
	($(srcdir)/examples-outputs.mk, regen-examples-outputs-mk)
	* doc/gen-figures-mk,
	* doc/gen-split-outputs-mk:
	Here.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Regen files in Milena.

	* doc/examples.mk: Regen.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove trash/ directories.

	* doc/examples/trash/accu.cc,
	* doc/examples/trash/box.cc,
	* doc/examples/trash/cpp_issue.cc,
	* doc/examples/trash/erosion.cc,
	* doc/examples/trash/for_Z.cc,
	* doc/examples/trash/graph.cc,
	* doc/examples/trash/image2d.cc,
	* doc/examples/trash/image_flat.cc,
	* doc/examples/trash/image_if.cc,
	* doc/examples/trash/image_plain.cc,
	* doc/examples/trash/image_safe.cc,
	* doc/examples/trash/labeling_algo.cc,
	* doc/examples/trash/mk_graph.cc,
	* doc/examples/trash/p_array.2.cc,
	* doc/examples/trash/p_array.cc,
	* doc/examples/trash/p_image.cc,
	* doc/examples/trash/p_key.2.cc,
	* doc/examples/trash/p_key.cc,
	* doc/examples/trash/p_line2d.cc,
	* doc/examples/trash/p_mutable_array_of.cc,
	* doc/examples/trash/p_queue.cc,
	* doc/examples/trash/p_run.cc,
	* doc/examples/trash/p_vaccess.cc,
	* doc/examples/trash/proxy.cc,
	* doc/examples/trash/sub_image.cc,
	* doc/examples/trash/sub_image_if.cc,
	* doc/examples/trash/tuto_bis.cc,
	* doc/examples/trash/tuto_one.cc,
	* doc/examples/trash/vec.cc,
	* doc/examples/trash/win_multiple.cc,
	* doc/examples/trash/window.cc,
	* trash/bgraph_image.cc,
	* trash/bgraph_image.hh,
	* trash/bgraph_psite.hh,
	* trash/boost_graph.cc,
	* trash/boost_graph.hh,
	* trash/boost_graph_access.hh,
	* trash/boost_graph_property.hh,